--- a/index.css
+++ b/index.css
@@ -3,31 +3,48 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
-    background-image: url('Home.jpg'); 
+    background-image: url('gloss.jpg'); 
     background-size: cover;  
     width: 100%;
     height: 100vh;
 }
-h1{
-    margin-top: 20dvh;
-}
-p {
-    margin-top: 20dvh;
-    margin-right: 40dvh;
-}
+
+
 .container {
-    display: flex;              
-    justify-content: space-between; 
-    align-items: center;        
-    padding: 20px;              
-    height: 100vh;              
-    color: white;             
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+    padding: 0 100px;
+    text-align: center;
 }
 
 .texto {
-    flex: 1; 
-    text-align: left; 
+    flex: 1;
+    text-align: left;
+    padding-right: 100px;
+    color: black; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 45%;
+    margin-left: 350px;
 }
+
+.texto h1 {
+    font-size: 5rem;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.texto p {
+    font-size: 3rem;
+    font-weight: 1.5;
+    margin-bottom: 50px;
+    text-align: justify; 
+    word-wrap: break-word;
+}
+
